fix(pr): bug fixes on safari and in build number == 0

--- a/app/scripts/modules/core/src/managed/overview/baseStyles.less
+++ b/app/scripts/modules/core/src/managed/overview/baseStyles.less
@@ -48,6 +48,10 @@
     .metadata-icon {
       margin-right: 6px;
       display: flex;
+
+      & > svg {
+        height: 16px;
+      }
     }
 
     .element-actions-menu-toggle {
